packages/deployment/k8s/ttk/bluebank-ttk.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bluebank-backend
  labels:
    name: ml-bluebank-backend
    instance: ttk
    mojaloop.service: bluebank
    mojaloop.layer: ttk
  annotations: null
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 4040
      targetPort: 4040
      name: spec-api
    - port: 5050
      targetPort: 5050
      name: admin-api
  selector:
    name: ml-bluebank-backend
    instance: ttk

---
apiVersion: v1
kind: Service
metadata:
  name: bluebank-frontend
  labels:
    name: ml-bluebank-frontend
    instance: ttk
    mojaloop.service: bluebank
    mojaloop.layer: ttk
  annotations: null
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 6060
      targetPort: 6060
      protocol: TCP
      nodePort: null
  selector:
    name: ml-bluebank-frontend
    instance: ttk

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluebank-frontend
  labels:
    name: ml-bluebank-frontend
    instance: ttk
    mojaloop.service: bluebank
    mojaloop.layer: ttk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ml-bluebank-frontend
      instance: ttk
  template:
    metadata:
      labels:
        name: ml-bluebank-frontend
        instance: ttk
        mojaloop.service: bluebank
        mojaloop.layer: ttk
      annotations:
        checksum/config: 405baf6d779398aafbf157b1b8c067a228d656200b906b62ca382cdb83cc96cf
    spec:
      initContainers: null
      containers:
        - name: ml-bluebank-frontend
          image: mojaloop/ml-testing-toolkit-ui:v15.3.0
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - /usr/share/nginx/start.sh
          ports:
            - containerPort: 6060
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bluebank-backend
  labels:
    name: ml-bluebank-backend
    instance: ttk
    mojaloop.service: bluebank
    mojaloop.layer: ttk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ml-bluebank-backend
      instance: ttk
  serviceName: bluebank-backend
  template:
    metadata:
      annotations:
        checksum/config: 5c26e6f500eff1c03ac651704fd38f8333b5f3f7d93a56828df7906aa146cee5
      labels:
        name: ml-bluebank-backend
        instance: ttk
        mojaloop.service: bluebank
        mojaloop.layer: ttk
    spec:
      initContainers: null
      containers:
      - name: ml-bluebank-backend
        image: mojaloop/ml-testing-toolkit:v16.1.1
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
        command:
          - sh
          - -c
          - cd /opt/default_config; for FILE in *; do
            newFileName=/opt/app/spec_files/${FILE//__/\/}; mkdir -p
            ${newFileName%/*}; firstLine=$(head -n 1 $FILE | tr -d \");
            regex="^(http|https|ftp)://"; if [[ "$firstLine" =~ $regex ]];
            then wget $firstLine -O $newFileName; else cp $FILE $newFileName;
            fi; done; cd /opt/app; npm run start;
        ports:
          - containerPort: 4040
          - containerPort: 5050
        volumeMounts:
          - name: bluebank-backend-volume-config-default
            mountPath: /opt/default_config
      volumes:
        - name: bluebank-backend-volume-config-default
          configMap:
            name: bluebank-backend-config-default
            items:
              - key: system_config.json
                path: system_config.json
              - key: user_config.json
                path: user_config.json
        - name: bluebank-backend-volume-extra-environments
          configMap:
            name: bluebank-backend-config-extra-environments
            items: null

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluebank-backend
  labels:
    name: ml-bluebank-backend
    instance: ttk
    mojaloop.service: bluebank
    mojaloop.layer: ttk
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  ingressClassName: nginx
  rules:
    - host: bluebank.local
      http:
        paths:
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: bluebank-backend
                port:
                  number: 5050
          - path: /socket.io/
            pathType: ImplementationSpecific
            backend:
              service:
                name: bluebank-backend
                port:
                  number: 5050
    - host: bluebank-specapi.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: bluebank-backend
                port:
                  number: 4040

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluebank-frontend
  labels:
    name: ml-bluebank-frontend
    instance: ttk
    mojaloop.service: bluebank
    mojaloop.layer: ttk
  annotations: null
spec:
  ingressClassName: nginx
  rules:
    - host: bluebank.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: bluebank-frontend
                port:
                  number: 6060
