packages/deployment/k8s/ttk/greenbank-ttk.yaml

apiVersion: v1
kind: Service
metadata:
  name: greenbank-backend
  labels:
    name: ml-greenbank-backend
    instance: ttk
    mojaloop.service: greenbank
    mojaloop.layer: ttk
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 4041
    targetPort: 4040
    name: spec-api
  - port: 5051
    targetPort: 5050
    name: admin-api
  selector:
    name: ml-greenbank-backend
    instance: ttk
---

apiVersion: v1
kind: Service
metadata:
  name: greenbank-frontend
  labels:
    name: ml-greenbank-frontend
    instance: ttk
    mojaloop.service: greenbank
    mojaloop.layer: ttk
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 6061
    targetPort: 6060
    protocol: TCP
    nodePort: null
  selector:
    name: ml-greenbank-frontend
    instance: ttk
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenbank-frontend
  labels:
    name: ml-greenbank-frontend
    instance: ttk
    mojaloop.service: greenbank
    mojaloop.layer: ttk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ml-greenbank-frontend
      instance: ttk
  template:
    metadata:
      labels:
        name: ml-greenbank-frontend
        instance: ttk
        mojaloop.service: greenbank
        mojaloop.layer: ttk
      annotations:
        checksum/config: 405baf6d779398aafbf157b1b8c067a228d656200b906b62ca382cdb83cc96cf
    spec:
      containers:
      - name: ml-greenbank-frontend
        image: "mojaloop/ml-testing-toolkit-ui:v15.3.0"
        imagePullPolicy: IfNotPresent
        command: ["sh", "/usr/share/nginx/start.sh"]
        ports:
        - containerPort: 6060
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: greenbank-backend
  labels:
    name: ml-greenbank-backend
    instance: ttk
    mojaloop.service: greenbank
    mojaloop.layer: ttk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ml-greenbank-backend
      instance: ttk
  serviceName: greenbank-backend
  template:
    metadata:
      annotations:
        checksum/config: 5c26e6f500eff1c03ac651704fd38f8333b5f3f7d93a56828df7906aa146cee5
      labels:
        name: ml-greenbank-backend
        instance: ttk
        mojaloop.service: greenbank
        mojaloop.layer: ttk
    spec:
      containers:
      - name: ml-greenbank-backend
        image: "mojaloop/ml-testing-toolkit:v16.1.1"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
        command: ["sh", "-c", "cd /opt/default_config; for FILE in *; do newFileName=/opt/app/spec_files/${FILE//__/\\/}; mkdir -p ${newFileName%/*}; firstLine=$(head -n 1 $FILE | tr -d \\\"); regex=\"^(http|https|ftp)://\"; if [[ \"$firstLine\" =~ $regex ]]; then wget $firstLine -O $newFileName; else cp $FILE $newFileName; fi; done; cd /opt/app; npm run start;"]
        ports:
        - containerPort: 4040
        - containerPort: 5050
        volumeMounts:
        - name: greenbank-backend-volume-config-default
          mountPath: /opt/default_config
      volumes:
      - name: greenbank-backend-volume-config-default
        configMap:
          name: greenbank-backend-config-default
          items:
          - key: system_config.json
            path: system_config.json
          - key: user_config.json
            path: user_config.json
      - name: greenbank-backend-volume-extra-environments
        configMap:
          name: greenbank-backend-config-extra-environments
          items:
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenbank-backend
  labels:
    name: ml-greenbank-backend
    instance: ttk
    mojaloop.service: greenbank
    mojaloop.layer: ttk
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
  - host: greenbank.local
    http:
      paths:
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: greenbank-backend
            port:
              number: 5051
      - path: /socket.io/
        pathType: ImplementationSpecific
        backend:
          service:
            name: greenbank-backend
            port:
              number: 5051
  - host: greenbank-specapi.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: greenbank-backend
            port:
              number: 4041
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenbank-frontend
  labels:
    name: ml-greenbank-frontend
    instance: ttk
    mojaloop.service: greenbank
    mojaloop.layer: ttk
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: greenbank.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: greenbank-frontend
            port:
              number: 6061
