packages/deployment/k8s/ttk/ttk.yaml
# Source: ml-testing-toolkit/charts/ml-testing-toolkit-backend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttk-ml-testing-toolkit-backend
  labels:
    app.kubernetes.io/name: ml-testing-toolkit-backend
    app.kubernetes.io/instance: ttk
    app.kubernetes.io/version: 15.5.0
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ml-testing-toolkit-backend-15.5.0
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 4040
    targetPort: 4040
    name: spec-api
  - port: 5050
    targetPort: 5050
    name: admin-api
  selector:
    app.kubernetes.io/name: ml-testing-toolkit-backend
    app.kubernetes.io/instance: ttk
---
# Source: ml-testing-toolkit/charts/ml-testing-toolkit-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttk-ml-testing-toolkit-frontend
  labels:
    app.kubernetes.io/name: ml-testing-toolkit-frontend
    app.kubernetes.io/instance: ttk
    app.kubernetes.io/version: 15.3.0
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ml-testing-toolkit-frontend-15.3.0
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 6060
    targetPort: 6060
    protocol: TCP
    nodePort: null
  selector:
    app.kubernetes.io/name: ml-testing-toolkit-frontend
    app.kubernetes.io/instance: ttk
---
# Source: ml-testing-toolkit/charts/ml-testing-toolkit-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttk-ml-testing-toolkit-frontend
  labels:
    app.kubernetes.io/name: ml-testing-toolkit-frontend
    app.kubernetes.io/instance: ttk
    app.kubernetes.io/version: 15.3.0
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ml-testing-toolkit-frontend-15.3.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ml-testing-toolkit-frontend
      app.kubernetes.io/instance: ttk
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ml-testing-toolkit-frontend
        app.kubernetes.io/instance: ttk
        app.kubernetes.io/version: 15.3.0
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: ml-testing-toolkit-frontend-15.3.0
      annotations:
        checksum/config: 405baf6d779398aafbf157b1b8c067a228d656200b906b62ca382cdb83cc96cf
    spec:
      containers:
      - name: ml-testing-toolkit-frontend
        image: "mojaloop/ml-testing-toolkit-ui:v15.3.0"
        imagePullPolicy: IfNotPresent
        command: ["sh", "/usr/share/nginx/start.sh"]
        ports:
        - containerPort: 6060
---
# Source: ml-testing-toolkit/charts/ml-testing-toolkit-backend/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ttk-ml-testing-toolkit-backend
  labels:
    app.kubernetes.io/name: ml-testing-toolkit-backend
    app.kubernetes.io/instance: ttk
    app.kubernetes.io/version: 15.5.0
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ml-testing-toolkit-backend-15.5.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ml-testing-toolkit-backend
      app.kubernetes.io/instance: ttk
  serviceName: ttk-ml-testing-toolkit-backend
  template:
    metadata:
      annotations:
        checksum/config: 5c26e6f500eff1c03ac651704fd38f8333b5f3f7d93a56828df7906aa146cee5
      labels:
        app.kubernetes.io/name: ml-testing-toolkit-backend
        app.kubernetes.io/instance: ttk
        app.kubernetes.io/version: 15.5.0
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: ml-testing-toolkit-backend-15.5.0
    spec:
      containers:
      - name: ml-testing-toolkit-backend
        image: "mojaloop/ml-testing-toolkit:v16.1.1"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
        command: ["sh", "-c", "cd /opt/default_config; for FILE in *; do newFileName=/opt/app/spec_files/${FILE//__/\\/}; mkdir -p ${newFileName%/*}; firstLine=$(head -n 1 $FILE | tr -d \\\"); regex=\"^(http|https|ftp)://\"; if [[ \"$firstLine\" =~ $regex ]]; then wget $firstLine -O $newFileName; else cp $FILE $newFileName; fi; done; cd /opt/app; npm run start;"]
        ports:
        - containerPort: 4040
        - containerPort: 5050
        volumeMounts:
        - name: ttk-ml-testing-toolkit-backend-volume-config-default
          mountPath: /opt/default_config
      volumes:
      - name: ttk-ml-testing-toolkit-backend-volume-config-default
        configMap:
          name: ttk-ml-testing-toolkit-backend-config-default
          items:
          - key: system_config.json
            path: system_config.json
          - key: user_config.json
            path: user_config.json
      - name: ttk-ml-testing-toolkit-backend-volume-extra-environments
        configMap:
          name: ttk-ml-testing-toolkit-backend-config-extra-environments
          items:
---
# Source: ml-testing-toolkit/charts/ml-testing-toolkit-backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttk-ml-testing-toolkit-backend
  labels:
    app.kubernetes.io/name: ml-testing-toolkit-backend
    app.kubernetes.io/instance: ttk
    app.kubernetes.io/version: 15.5.0
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ml-testing-toolkit-backend-15.5.0
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
  - host: testing-toolkit.local
    http:
      paths:
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: ttk-ml-testing-toolkit-backend
            port:
              number: 5050
      - path: /socket.io/
        pathType: ImplementationSpecific
        backend:
          service:
            name: ttk-ml-testing-toolkit-backend
            port:
              number: 5050
  - host: testing-toolkit-specapi.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ttk-ml-testing-toolkit-backend
            port:
              number: 4040
---
# Source: ml-testing-toolkit/charts/ml-testing-toolkit-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttk-ml-testing-toolkit-frontend
  labels:
    app.kubernetes.io/name: ml-testing-toolkit-frontend
    app.kubernetes.io/instance: ttk
    app.kubernetes.io/version: 15.3.0
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ml-testing-toolkit-frontend-15.3.0
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: testing-toolkit.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ttk-ml-testing-toolkit-frontend
            port:
              number: 6060
